@@ -1,3 +1,9 @@
+2016-08-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCcflow.c (eBBSuccessors),
+	* src/SDCCloop.c (addPostLoopBlock): fixed bug #2453
+	* support/regression/tests/bug-2453: added test
+
 2016-08-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/tlcs90/setjmp.s,
